	PR other/37897 	* decDouble.h (decDouble): Replace struct with union accessible 	by more types. 	* decSingle.h (decSingle): Ditto. 	* decQuad.h (decQuad): Ditto. 	* decNumberLocal.h (DFWORD, DFBYTE, DFWWORD): access decFloat via 	new members. 	* decBasic.c (decFloatCompareTotal): Avoid type-pun violation. 	(decNumberCompare): Ditto.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@141386 138bc75d-0d04-0410-961f-82ee72b054a4