libdecnumber/decQuad.h
@@ -59,9 +59,11 @@
   /* Required include						      */
   #include "decContext.h"
 
-  /* The decQuad decimal 128-bit type, accessible by bytes */
-  typedef struct {
+  /* The decQuad decimal 128-bit type, accessible by various types */
+  typedef union {
     uint8_t bytes[DECQUAD_Bytes];  /* fields: 1, 5, 12, 110 bits */
+    uint16_t shorts[DECQUAD_Bytes/2];
+    uint32_t words[DECQUAD_Bytes/4];
     } decQuad;
 
   /* ---------------------------------------------------------------- */
